--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             background: linear-gradient(135deg, #8B4513, #000080, #4B0082);
             margin: 0;
             align-items: center;
-            height: 100vh;
+            min-height: 100vh;
         }
 
         header {
@@ -26,7 +26,7 @@
             top: 0;
             left: 0;
             width: 100%;
-            z-index: 0;
+            z-index: 1;
         }
 
         .header-title {
@@ -57,10 +57,10 @@
 
         .container {
             position: relative;
+            width: 80%;
+            height: auto;
+            margin: 0 auto;
             top: 10vh;
-            left: 20%;
-            width: 60%;
-            height: 90vh;
             text-align: center;
             padding: 20px;
             background: linear-gradient(135deg, #d44141, #e0e0e0, #2196f3);
@@ -208,17 +208,15 @@
         .close-button:hover {
             color: #333;
         }
-        .footer{
-             position: relative;
-             margin-bottom: 10px;
-            width: 50vh;
-            height: 20%;
+
+        .footer {
+            margin-top: 20px;
             text-align: center;
             padding: 20px;
             background: linear-gradient(135deg, #d44141, #e0e0e0, #2196f3);
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.9);
-            font-size:1em
+            font-size: 1em;
         }
 
         /* Media queries for responsiveness */
@@ -232,47 +230,37 @@
                 margin-top: 10px;
             }
 
-            .play-mode-cards {
-                text-align: center;
+            .play-mode-card {
+                flex: 1 1 100%;
             }
         }
 
         /* Mobile responsiveness */
         @media screen and (max-width: 480px) {
             .container {
-                /* position: absolute; */
-                align-items: center;
-                top: 20%;
-                left: 5%;
+                padding: 0 10px;
             }
 
             .header-title {
-                font-size: 20px;
+                font-size: 1.2rem;
             }
 
             .play-mode-card {
+                flex: 1 1 100%;
                 padding: 10px;
-                margin-bottom: 10px;
+                margin: 5px 0;
             }
 
             .popup {
-                max-width: 350px;
+                max-width: 300px;
             }
-           .footer{
-             position: relative;
-             margin-bottom: 10px;
-             left: -4vh;
-            width: 50%;
-            height: 20%;
-            text-align: center;
-            padding: 5px;
-            background: linear-gradient(135deg, #d44141, #e0e0e0, #2196f3);
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.9);
-            font-size:0.8em
-        }
+
+            .footer {
+                font-size: 0.8em;
+            }
         }
     </style>
+
 </head>
 
 <body>
@@ -324,8 +312,8 @@
             </div>
         </div>
         <div class="footer">
-            <p>Win 100rs if you win vs computer in hard mode</p>
-            <p>Send the Screenshot to srisumit4@gmail.com to recieve your winninng money.</p>
+            <!-- <p>Win 100rs if you win vs computer in hard mode</p> -->
+            <!-- <p>Send the Screenshot to srisumit4@gmail.com to recieve your winninng money.</p> -->
             <p>Made By Sumit Srivastava</p>
         </div>
         <script>
