--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
     <header>
         <div class="header-title">Tic Tac Toe</div>
         <div class="header-buttons">
-            <button class="header-button">Login</button>
+            <button class="header-button">Login <a href="/login.html"> </button>
             <!-- <button class="header-button">Sign Up</button> -->
         </div>
     </header>
