--- a/computer_play_easy.html
+++ b/computer_play_easy.html
@@ -8,123 +8,78 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background: linear-gradient(135deg, #8B4513, #000080, #4B0082);
-            /* Royal color blend */
-            margin: 0;
             display: flex;
-            justify-content: center;
+            flex-direction: column;
             align-items: center;
-            height: 100vh;
+            justify-content: center;
+            min-height: 100vh;
+            margin: 0;
+            background-color: #f5f5f5;
+            color: #333;
         }
 
-        h1 {
-            position: absolute;
-            top: 1%;
-            margin-bottom: 20px;
-            color: #dbdada;
-        }
-
-        h2 {
-            position: absolute;
-            top: 8%;
-            color: #dbdada;
+        h1, h2 {
+            margin: 0.5em 0;
         }
 
         .board {
-            margin-top: 30px;
             display: grid;
-            grid-template-columns: repeat(3, 120px);
-            gap: 5px;
-            background: linear-gradient(135deg, #0b7966, #c57f5b);
-            border: 1px solid #ccc;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            border-radius: 10px;
+            grid-template-columns: repeat(3, 100px);
+            grid-template-rows: repeat(3, 100px);
+            gap: 10px;
+            margin: 20px 0;
         }
 
         .cell {
-            width: 120px;
-            height: 120px;
-            font-size: 36px;
-            text-align: center;
-            line-height: 120px;
-            border: 2px solid #ccc;
+            width: 100px;
+            height: 100px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 2em;
+            background-color: #fff;
+            border: 1px solid #ddd;
             cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-
-        .cell.X,
-        .cell.O {
-            pointer-events: none;
-            color: #333;
-        }
-
-        .cell.X {
-            color: #f44336;
-        }
-
-        .cell.O {
-            color: #2196f3;
+            transition: background-color 0.3s;
         }
 
         .cell:hover {
-            background-color: #f0f0f0;
+            background-color: #f1f1f1;
+        }
+
+        .btn {
+            margin: 20px 0;
+        }
+
+        .btn button {
+            padding: 10px 20px;
+            font-size: 1em;
+            background-color: #4285f4;
+            color: #fff;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        .btn button:hover {
+            background-color: #357ae8;
         }
 
         .score {
-            position: absolute;
-            top: 22%;
-            left: 5%;
-            right: 20px;
-            transform: translateY(-50%);
-            background-color: #fff;
-            border-radius: 10px;
-            padding: 10px 20px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
             text-align: center;
-            color: #333;
         }
 
         .score h2 {
-            margin-top: 0;
-            font-size: 24px;
-            color: #000000;
+            margin-bottom: 10px;
         }
 
         .score p {
-            margin: 10px 0;
-            font-size: 18px;
+            margin: 5px 0;
         }
 
         .score span {
             font-weight: bold;
-            color: #2196f3;
-        }
-
-        .btn {
-            margin-top: 20px;
-            text-align: center;
-        }
-
-        .btn a {
-            text-decoration: none;
-        }
-
-        .btn button {
-            position: absolute;
-            top: 80%;
-            left: 40%;
-            background-color: #333;
-            color: #fff;
-            border: none;
-            padding: 15px 22px;
-            font-size: 22px;
-            border-radius: 10px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-
-        .btn button:hover {
-            background-color: #555;
         }
     </style>
 </head>
@@ -144,7 +99,7 @@
         <div class="cell" onclick="makeMove(this)"></div>
     </div>
     <div class="btn">
-        <a href="index.html"><button>Back</button></a>
+        <a href="tictactoe.html"><button>Back</button></a>
     </div>
     <div class="score">
         <h2>Score</h2>
