--- a/pass_and_play.html
+++ b/pass_and_play.html
@@ -11,159 +11,82 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      /* justify-content: center; */
-      height: 100vh;
+      justify-content: center;
+      min-height: 100vh;
       margin: 0;
-      background: linear-gradient(135deg, #d44141, #e0e0e0, #2196f3);
-      /* background-color: #f5f5f5; */
-    }
-
-    h1 {
-      margin-top: 50px;
-      margin-bottom: 120px;
+      background-color: #f5f5f5;
       color: #333;
     }
 
+    h1,
+    h2 {
+      margin: 0.5em 0;
+    }
 
     .board {
-      margin-top: 35px;
       display: grid;
-      grid-template-columns: repeat(3, 150px);
-      gap: 15px;
-      background: linear-gradient(135deg, #8B4513, #000080, #4B0082);
-      border: 2px solid #ccc;
-      border-radius: 15px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
+      grid-template-columns: repeat(3, 100px);
+      grid-template-rows: repeat(3, 100px);
+      gap: 10px;
+      margin: 20px 0;
     }
 
     .cell {
-      width: 150px;
-      height: 150px;
-      font-size: 36px;
-      text-align: center;
-      line-height: 150px;
-      border: 2px solid #ccc;
-      border-radius: 10px;
+      width: 100px;
+      height: 100px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 2em;
+      background-color: #fff;
+      border: 1px solid #ddd;
       cursor: pointer;
-      transition: background-color 0.3s ease;
-    }
-
-    .cell.X,
-    .cell.O {
-      pointer-events: none;
-      color: #333;
-    }
-
-    .cell.X {
-      color: #f44336;
-    }
-
-    .cell.O {
-      color: #2196f3;
+      transition: background-color 0.3s;
     }
 
     .cell:hover {
-      background-color: #f0f0f0;
-    }
-
-    /* Add styles for the score board */
-    .score-board {
-      width: 50%;
-      transform: translateY(-50%);
-      background-color: #fff;
-      border-radius: 10px;
-      padding: 10px 20px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7);
-      text-align: center;
-      color: #333;
-    }
-
-    .score {
-      display: flex;
-      padding: 10px;
-      align-items: center;
-    }
-
-    .score span {
-      margin-right: 5px;
+      background-color: #f1f1f1;
     }
 
     .btn {
-      margin-top: 20px;
-      text-align: center;
-    }
-
-    .btn a {
-      text-decoration: none;
+      margin: 20px 0;
     }
 
     .btn button {
-      background-color: #333;
+      padding: 10px 20px;
+      font-size: 1em;
+      background-color: #4285f4;
       color: #fff;
       border: none;
-      padding: 15px 22px;
-      border-radius: 10px;
-      font-size: 16px;
+      border-radius: 4px;
       cursor: pointer;
-      transition: background-color 0.3s ease;
+      transition: background-color 0.3s;
     }
 
     .btn button:hover {
-      background-color: #555;
+      background-color: #357ae8;
     }
 
-    /* Media queries for responsiveness */
-    @media screen and (max-width: 768px) {
-      .header {
-        flex-direction: column;
-        text-align: center;
-      }
-
-      .header-buttons {
-        margin-top: 10px;
-      }
-
-      .play-mode-cards {
-        text-align: center;
-      }
+    .score {
+      text-align: center;
     }
 
-    /* Mobile responsiveness */
-    @media screen and (max-width: 480px) {
-      .board {
-        margin-top: 15px;
-        display: grid;
-        grid-template-columns: repeat(3, 120px);
-        gap: 5px;
-        background: linear-gradient(135deg, #8B4513, #000080, #4B0082);
-        /* background-color: #fff; */
-        border: 1px solid #ccc;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      }
+    .score h2 {
+      margin-bottom: 10px;
+    }
 
-      .cell {
-        width: 120px;
-        height: 120px;
-        font-size: 36px;
-        text-align: center;
-        line-height: 100px;
-        border: 2px solid #ccc;
-        cursor: pointer;
-        transition: background-color 0.3s ease;
-      }
+    .score p {
+      margin: 5px 0;
+    }
 
-      .header-title {
-        font-size: 20px;
-      }
+    .score span {
+      font-weight: bold;
+    }
 
-      .play-mode-card {
-        padding: 10px;
-        margin-bottom: 10px;
-      }
-
-      .popup {
-        max-width: 350px;
-      }
+    #message {
+      font-size: 1.2em;
+      color: #333;
+      margin-bottom: 20px;
     }
   </style>
 </head>
@@ -192,7 +115,7 @@
     <div class="cell" onclick="makeMove(this)"></div>
   </div>
   <div class="btn">
-    <a href="index.html"><button>Back</button></a>
+    <a href="tictactoe.html"><button>Back</button></a>
   </div>
   <script>
     let currentPlayer = 'X';
