--- a/computer_play_easy.html
+++ b/computer_play_easy.html
@@ -99,7 +99,7 @@
         <div class="cell" onclick="makeMove(this)"></div>
     </div>
     <div class="btn">
-        <a href="tictactoe.html"><button>Back</button></a>
+        <a href="index.html"><button>Back</button></a>
     </div>
     <div class="score">
         <h2>Score</h2>
