--- a/computer_play_hard.html
+++ b/computer_play_hard.html
@@ -107,7 +107,7 @@
     </div>
     <div id="message" style="display: none;">Computer: Thinking...</div>
     <div class="btn">
-        <a href="tictactoe.html"><button>Back</button></a>
+        <a href="index.html"><button>Back</button></a>
     </div>
     <div class="score">
         <h2>Score</h2>
