--- a/pass_and_play.html
+++ b/pass_and_play.html
@@ -115,7 +115,7 @@
     <div class="cell" onclick="makeMove(this)"></div>
   </div>
   <div class="btn">
-    <a href="tictactoe.html"><button>Back</button></a>
+    <a href="index.html"><button>Back</button></a>
   </div>
   <script>
     let currentPlayer = 'X';
