--- a/pass_and_play.html
+++ b/pass_and_play.html
@@ -5,90 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tic Tac Toe</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      min-height: 100vh;
-      margin: 0;
-      background-color: #f5f5f5;
-      color: #333;
-    }
-
-    h1,
-    h2 {
-      margin: 0.5em 0;
-    }
-
-    .board {
-      display: grid;
-      grid-template-columns: repeat(3, 100px);
-      grid-template-rows: repeat(3, 100px);
-      gap: 10px;
-      margin: 20px 0;
-    }
-
-    .cell {
-      width: 100px;
-      height: 100px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 2em;
-      background-color: #fff;
-      border: 1px solid #ddd;
-      cursor: pointer;
-      transition: background-color 0.3s;
-    }
-
-    .cell:hover {
-      background-color: #f1f1f1;
-    }
-
-    .btn {
-      margin: 20px 0;
-    }
-
-    .btn button {
-      padding: 10px 20px;
-      font-size: 1em;
-      background-color: #4285f4;
-      color: #fff;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      transition: background-color 0.3s;
-    }
-
-    .btn button:hover {
-      background-color: #357ae8;
-    }
-
-    .score {
-      text-align: center;
-    }
-
-    .score h2 {
-      margin-bottom: 10px;
-    }
-
-    .score p {
-      margin: 5px 0;
-    }
-
-    .score span {
-      font-weight: bold;
-    }
-
-    #message {
-      font-size: 1.2em;
-      color: #333;
-      margin-bottom: 20px;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -117,70 +34,7 @@
   <div class="btn">
     <a href="index.html"><button>Back</button></a>
   </div>
-  <script>
-    let currentPlayer = 'X';
-    let scoreX = 0;
-    let scoreO = 0;
-    const board = document.getElementById('board');
-    const cells = board.getElementsByClassName('cell');
-    const scoreXElement = document.getElementById('scoreX');
-    const scoreOElement = document.getElementById('scoreO');
-
-    function makeMove(cell) {
-      if (!cell.textContent) {
-        cell.textContent = currentPlayer;
-        cell.classList.add(currentPlayer);
-        if (checkWinner()) {
-          updateScore(currentPlayer);
-          setTimeout(() => {
-            alert(`${currentPlayer} wins!`);
-            resetBoard();
-          }, 100);
-        } else if ([...cells].every(cell => cell.textContent !== '')) {
-          setTimeout(() => {
-            alert("It's a draw!");
-            resetBoard();
-          }, 100);
-        } else {
-          currentPlayer = currentPlayer === 'X' ? 'O' : 'X';
-        }
-      }
-    }
-
-    function checkWinner() {
-      const winningCombinations = [
-        [0, 1, 2], [3, 4, 5], [6, 7, 8],
-        [0, 3, 6], [1, 4, 7], [2, 5, 8],
-        [0, 4, 8], [2, 4, 6]
-      ];
-
-      for (const combination of winningCombinations) {
-        const [a, b, c] = combination;
-        if (cells[a].textContent && cells[a].textContent === cells[b].textContent && cells[a].textContent === cells[c].textContent) {
-          return true;
-        }
-      }
-      return false;
-    }
-
-    function updateScore(player) {
-      if (player === 'X') {
-        scoreX++;
-        scoreXElement.textContent = scoreX;
-      } else {
-        scoreO++;
-        scoreOElement.textContent = scoreO;
-      }
-    }
-
-    function resetBoard() {
-      for (const cell of cells) {
-        cell.textContent = '';
-        cell.classList.remove('X', 'O');
-      }
-      currentPlayer = 'X';
-    }
-  </script>
+ <script src="pass.js"></script>
 </body>
 
 </html>
