--- a/computer_play_easy.html
+++ b/computer_play_easy.html
@@ -5,83 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Play Against Computer</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            min-height: 100vh;
-            margin: 0;
-            background-color: #f5f5f5;
-            color: #333;
-        }
-
-        h1, h2 {
-            margin: 0.5em 0;
-        }
-
-        .board {
-            display: grid;
-            grid-template-columns: repeat(3, 100px);
-            grid-template-rows: repeat(3, 100px);
-            gap: 10px;
-            margin: 20px 0;
-        }
-
-        .cell {
-            width: 100px;
-            height: 100px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 2em;
-            background-color: #fff;
-            border: 1px solid #ddd;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-
-        .cell:hover {
-            background-color: #f1f1f1;
-        }
-
-        .btn {
-            margin: 20px 0;
-        }
-
-        .btn button {
-            padding: 10px 20px;
-            font-size: 1em;
-            background-color: #4285f4;
-            color: #fff;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-
-        .btn button:hover {
-            background-color: #357ae8;
-        }
-
-        .score {
-            text-align: center;
-        }
-
-        .score h2 {
-            margin-bottom: 10px;
-        }
-
-        .score p {
-            margin: 5px 0;
-        }
-
-        .score span {
-            font-weight: bold;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -107,93 +31,7 @@
         <p>Computer: <span id="computerScore">0</span></p>
     </div>
 
-    <script>
-        const board = document.getElementById('board');
-        const cells = board.getElementsByClassName('cell');
-        const playerScoreElement = document.getElementById('playerScore');
-        const computerScoreElement = document.getElementById('computerScore');
-        let playerScore = 0;
-        let computerScore = 0;
-        let currentPlayer = 'X';
-        let gameOver = false;
-
-        function makeMove(cell) {
-            if (!cell.textContent && !gameOver) {
-                cell.textContent = 'X'; // Human player's move
-
-                if (checkWinner('X')) {
-                    setTimeout(() => {
-                        alert('You win!');
-                        playerScore++;
-                        updateScore();
-                        resetBoard();
-                    }, 100);
-                } else if ([...cells].every(cell => cell.textContent !== '')) {
-                    setTimeout(() => {
-                        alert("It's a draw!");
-                        resetBoard();
-                    }, 100);
-                } else {
-                    currentPlayer = 'O';
-                    makeComputerMove();
-                }
-            }
-        }
-
-        function makeComputerMove() {
-            const emptyCells = [...cells].filter(cell => !cell.textContent);
-
-            if (emptyCells.length > 0) {
-                const randomIndex = Math.floor(Math.random() * emptyCells.length);
-                const computerMove = emptyCells[randomIndex];
-                computerMove.textContent = 'O'; // Computer's move
-
-                if (checkWinner('O')) {
-                    setTimeout(() => {
-                        alert('Computer wins!');
-                        computerScore++;
-                        updateScore();
-                        resetBoard();
-                    }, 100);
-                } else if ([...cells].every(cell => cell.textContent !== '')) {
-                    setTimeout(() => {
-                        alert("It's a draw!");
-                        resetBoard();
-                    }, 100);
-                } else {
-                    currentPlayer = 'X';
-                }
-            }
-        }
-
-        function checkWinner(player) {
-            const winningCombinations = [
-                [0, 1, 2], [3, 4, 5], [6, 7, 8],
-                [0, 3, 6], [1, 4, 7], [2, 5, 8],
-                [0, 4, 8], [2, 4, 6]
-            ];
-
-            for (const combination of winningCombinations) {
-                const [a, b, c] = combination;
-                if (cells[a].textContent === player && cells[b].textContent === player && cells[c].textContent === player) {
-                    return true;
-                }
-            }
-            return false;
-        }
-
-        function resetBoard() {
-            for (const cell of cells) {
-                cell.textContent = '';
-            }
-            gameOver = false;
-        }
-
-        function updateScore() {
-            playerScoreElement.textContent = playerScore;
-            computerScoreElement.textContent = computerScore;
-        }
-    </script>
+<script src="easy.js"></script>
 </body>
 
 </html>
